@@ -138,14 +138,15 @@ fully support the editing toolbar, but was found to be too confusing.
 * Fix meta robots tag on Special:Version again to avoid listing vulnerable
   versions for convenient harvesting by automated worms
 * (bug 3580) Change default Dutch language file to more neutral
-* (bug 3656) Minor LanguageHr.php update - added convertPlural() code
-* (bug 3414) Add plural forms support to Belarusian
+* (bug 3656) LanguageHr.php - added convertPlural
+* (bug 3414) LanguageBe.php - added convertPlural
 * (bug 3163) Full translation of LanguageBr
 * (bug 3617) Update for portuguese language (pt)
 * Namespaces hacks on LanguagePl
 * New preferences design and reorganisation
 * (bug 2585) Return proper 404 code when pages don't exist
 * (bug 3684) Fix typo in fatal error backtraces in Hooks.php
+* (bug 3682) LanguageSr.php - added convertPlural
 
 
 === Caveats ===
